fix overflow buttons list

--- a/mywebapp/public/contentbox/contentbox.css
+++ b/mywebapp/public/contentbox/contentbox.css
@@ -1973,9 +1973,9 @@ body.frame-center.controlpanel .is-content-view {
   color: #c7c7c7;
   background-color: #7676803D;
 }
-.dark .builder-ui input[type=checkbox] {
+/* .dark .builder-ui input[type=checkbox] {
   opacity: 0.7;
-}
+} */
 .dark .builder-ui select {
   color: #c7c7c7;
   background-color: #313131;
